--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -124,6 +124,7 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::8d;
@@ -248,6 +249,7 @@ allow 2607:5300:205:200::3dde;
 allow 2607:5300:205:200::4894;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
+allow 2607:f530:8002::19;
 allow 2620:7:6001::184;
 allow 2620:7:6001::185;
 allow 2620:7:6001::186;
@@ -269,6 +271,7 @@ allow 2a00:1dc0:caff:99::d348;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:c506::1;
+allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
