--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -660,6 +660,7 @@ allow 194.233.174.56;
 allow 194.26.192.77;
 allow 194.26.196.116;
 allow 194.26.196.71;
+allow 194.62.248.21;
 allow 195.160.220.104;
 allow 195.176.3.19;
 allow 195.176.3.20;
@@ -915,6 +916,7 @@ allow 2.57.122.246;
 allow 2.57.122.58;
 allow 2.58.56.220;
 allow 2.58.56.248;
+allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.90;
 allow 2.58.95.35;
@@ -1174,7 +1176,6 @@ allow 2a05:541:110:3e::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67c6::1;
-allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6b72::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
@@ -1387,6 +1388,7 @@ allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:3e3:519::1;
+allow 2a0e:97c0:3ea:372::1;
 allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
@@ -1436,7 +1438,6 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.208.169.208;
 allow 35.0.127.52;
 allow 37.114.37.81;
 allow 37.114.41.119;
@@ -1453,6 +1454,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
+allow 44.223.182.111;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1508,7 +1510,6 @@ allow 45.80.158.27;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.85.15.23;
-allow 45.92.1.74;
 allow 45.94.31.180;
 allow 45.94.31.68;
 allow 45.95.169.223;
@@ -1649,7 +1650,6 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
-allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
