--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -660,6 +660,7 @@ deny 194.233.174.56;
 deny 194.26.192.77;
 deny 194.26.196.116;
 deny 194.26.196.71;
+deny 194.62.248.21;
 deny 195.160.220.104;
 deny 195.176.3.19;
 deny 195.176.3.20;
@@ -915,6 +916,7 @@ deny 2.57.122.246;
 deny 2.57.122.58;
 deny 2.58.56.220;
 deny 2.58.56.248;
+deny 2.58.56.35;
 deny 2.58.56.43;
 deny 2.58.56.90;
 deny 2.58.95.35;
@@ -1174,7 +1176,6 @@ deny 2a05:541:110:3e::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
 deny 2a05:b0c7:67c6::1;
-deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6b72::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a06:1280:bee1:2::ee12:230;
@@ -1387,6 +1388,7 @@ deny 2a0c:e300::23;
 deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:3e3:519::1;
+deny 2a0e:97c0:3ea:372::1;
 deny 2a0e:97c0:3ea:bc::1;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:ed78:7632;
@@ -1436,7 +1438,6 @@ deny 2a12:d8c0:109a:9001::7;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.42.185.134;
-deny 3.208.169.208;
 deny 35.0.127.52;
 deny 37.114.37.81;
 deny 37.114.41.119;
@@ -1453,6 +1454,7 @@ deny 37.252.255.135;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.242.254.131;
+deny 44.223.182.111;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1508,7 +1510,6 @@ deny 45.80.158.27;
 deny 45.8.22.207;
 deny 45.83.104.137;
 deny 45.85.15.23;
-deny 45.92.1.74;
 deny 45.94.31.180;
 deny 45.94.31.68;
 deny 45.95.169.223;
@@ -1649,7 +1650,6 @@ deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.211.225.54;
 deny 84.239.46.144;
-deny 84.54.51.61;
 deny 84.54.51.68;
 deny 84.54.51.69;
 deny 85.17.9.83;
