--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -371,7 +371,6 @@ deny 2a05:541:110:3e::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
 deny 2a05:b0c7:67c6::1;
-deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6b72::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a06:1280:bee1:2::ee12:230;
@@ -584,6 +583,7 @@ deny 2a0c:e300::23;
 deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:3e3:519::1;
+deny 2a0e:97c0:3ea:372::1;
 deny 2a0e:97c0:3ea:bc::1;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:ed78:7632;
