--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -202,7 +201,6 @@ allow 176.58.100.98;
 allow 176.97.114.202;
 allow 176.97.114.252;
 allow 178.162.209.56;
-allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -285,6 +283,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -644,9 +643,6 @@ allow 193.233.133.42;
 allow 193.239.232.230;
 allow 193.26.115.43;
 allow 193.26.115.61;
-allow 193.35.18.105;
-allow 193.35.18.49;
-allow 193.35.18.77;
 allow 193.41.226.117;
 allow 194.15.112.133;
 allow 194.15.113.118;
@@ -843,6 +839,7 @@ allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
+allow 209.135.168.10;
 allow 209.135.168.56;
 allow 209.141.32.198;
 allow 209.141.37.94;
@@ -862,8 +859,6 @@ allow 212.95.52.76;
 allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
-allow 216.73.159.101;
-allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.146.2.41;
 allow 23.137.248.100;
@@ -929,6 +924,7 @@ allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
+allow 2602:f9f3:0:2::5;
 allow 2602:f9f3:0:2::8d;
 allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:759::1;
@@ -1067,7 +1063,6 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
-allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
@@ -1170,9 +1165,13 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
-allow 2a05:b0c7:67c6::1;
-allow 2a05:b0c7:6b72::1;
-allow 2a05:b0c7:6bd4::1;
+allow 2a05:b0c7:67b0::1;
+allow 2a05:b0c7:67bb::1;
+allow 2a05:b0c7:6841::1;
+allow 2a05:b0c7:696c::1;
+allow 2a05:b0c7:6978::1;
+allow 2a05:b0c7:6b6c::1;
+allow 2a05:b0c7:6c28::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1191,7 +1190,6 @@ allow 2a06:1700:4:11:7::2;
 allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
-allow 2a06:de01:200::23;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
@@ -1432,6 +1430,7 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 34.196.145.187;
 allow 35.0.127.52;
 allow 37.114.37.81;
 allow 37.1.201.144;
@@ -1448,11 +1447,9 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
-allow 44.205.206.212;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
-allow 45.128.232.151;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1502,7 +1499,6 @@ allow 45.80.158.205;
 allow 45.80.158.27;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.85.15.23;
 allow 45.94.31.180;
 allow 45.94.31.68;
 allow 45.95.169.223;
@@ -1521,6 +1517,7 @@ allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.38.255.27;
+allow 47.243.93.217;
 allow 51.15.249.160;
 allow 51.15.59.15;
 allow 51.158.115.62;
@@ -1641,8 +1638,6 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
-allow 84.54.51.68;
-allow 84.54.51.69;
 allow 85.17.9.83;
 allow 85.215.76.62;
 allow 85.239.41.130;
@@ -1679,7 +1674,6 @@ allow 89.58.63.200;
 allow 91.103.253.141;
 allow 91.132.144.59;
 allow 91.139.160.150;
-allow 91.193.18.63;
 allow 91.202.5.104;
 allow 91.203.144.194;
 allow 91.206.26.26;
@@ -1714,6 +1708,13 @@ allow 93.99.104.138;
 allow 93.99.104.18;
 allow 93.99.104.194;
 allow 94.102.51.15;
+allow 94.103.124.101;
+allow 94.103.124.104;
+allow 94.103.124.107;
+allow 94.103.124.121;
+allow 94.103.124.90;
+allow 94.103.124.91;
+allow 94.103.124.98;
 allow 94.140.115.63;
 allow 94.142.241.194;
 allow 94.142.244.16;
@@ -1741,7 +1742,6 @@ allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
-allow 95.164.4.104;
 allow 95.164.46.204;
 allow 95.168.173.143;
 allow 95.211.244.28;
