--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,7 +5,6 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
@@ -202,7 +201,6 @@ set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 176.97.114.252;
 set_real_ip_from 178.162.209.56;
-set_real_ip_from 178.17.170.184;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
 set_real_ip_from 178.17.174.14;
@@ -285,6 +283,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -644,9 +643,6 @@ set_real_ip_from 193.233.133.42;
 set_real_ip_from 193.239.232.230;
 set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
-set_real_ip_from 193.35.18.105;
-set_real_ip_from 193.35.18.49;
-set_real_ip_from 193.35.18.77;
 set_real_ip_from 193.41.226.117;
 set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
@@ -843,6 +839,7 @@ set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.124.193;
 set_real_ip_from 205.185.127.231;
+set_real_ip_from 209.135.168.10;
 set_real_ip_from 209.135.168.56;
 set_real_ip_from 209.141.32.198;
 set_real_ip_from 209.141.37.94;
@@ -862,8 +859,6 @@ set_real_ip_from 212.95.52.76;
 set_real_ip_from 213.252.140.118;
 set_real_ip_from 213.95.149.22;
 set_real_ip_from 216.239.90.19;
-set_real_ip_from 216.73.159.101;
-set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
 set_real_ip_from 217.146.2.41;
 set_real_ip_from 23.137.248.100;
@@ -929,6 +924,7 @@ set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
+set_real_ip_from 2602:f9f3:0:2::5;
 set_real_ip_from 2602:f9f3:0:2::8d;
 set_real_ip_from 2602:f9f3:0:2::91;
 set_real_ip_from 2602:fc24:12:759::1;
@@ -1067,7 +1063,6 @@ set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
-set_real_ip_from 2a00:1dc0:caff:178::982b;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
@@ -1170,9 +1165,13 @@ set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:122:49::1;
-set_real_ip_from 2a05:b0c7:67c6::1;
-set_real_ip_from 2a05:b0c7:6b72::1;
-set_real_ip_from 2a05:b0c7:6bd4::1;
+set_real_ip_from 2a05:b0c7:67b0::1;
+set_real_ip_from 2a05:b0c7:67bb::1;
+set_real_ip_from 2a05:b0c7:6841::1;
+set_real_ip_from 2a05:b0c7:696c::1;
+set_real_ip_from 2a05:b0c7:6978::1;
+set_real_ip_from 2a05:b0c7:6b6c::1;
+set_real_ip_from 2a05:b0c7:6c28::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
 set_real_ip_from 2a06:1700:0:12::2;
@@ -1191,7 +1190,6 @@ set_real_ip_from 2a06:1700:4:11:7::2;
 set_real_ip_from 2a06:1700:4:14::1;
 set_real_ip_from 2a06:d380:0:103::62;
 set_real_ip_from 2a06:d380:0:103::63;
-set_real_ip_from 2a06:de01:200::23;
 set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
 set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
@@ -1432,6 +1430,7 @@ set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 34.196.145.187;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.37.81;
 set_real_ip_from 37.1.201.144;
@@ -1448,11 +1447,9 @@ set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.254.131;
-set_real_ip_from 44.205.206.212;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
-set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
@@ -1502,7 +1499,6 @@ set_real_ip_from 45.80.158.205;
 set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
-set_real_ip_from 45.85.15.23;
 set_real_ip_from 45.94.31.180;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.223;
@@ -1521,6 +1517,7 @@ set_real_ip_from 46.226.164.14;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 46.38.255.27;
+set_real_ip_from 47.243.93.217;
 set_real_ip_from 51.15.249.160;
 set_real_ip_from 51.15.59.15;
 set_real_ip_from 51.158.115.62;
@@ -1641,8 +1638,6 @@ set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
-set_real_ip_from 84.54.51.68;
-set_real_ip_from 84.54.51.69;
 set_real_ip_from 85.17.9.83;
 set_real_ip_from 85.215.76.62;
 set_real_ip_from 85.239.41.130;
@@ -1679,7 +1674,6 @@ set_real_ip_from 89.58.63.200;
 set_real_ip_from 91.103.253.141;
 set_real_ip_from 91.132.144.59;
 set_real_ip_from 91.139.160.150;
-set_real_ip_from 91.193.18.63;
 set_real_ip_from 91.202.5.104;
 set_real_ip_from 91.203.144.194;
 set_real_ip_from 91.206.26.26;
@@ -1714,6 +1708,13 @@ set_real_ip_from 93.99.104.138;
 set_real_ip_from 93.99.104.18;
 set_real_ip_from 93.99.104.194;
 set_real_ip_from 94.102.51.15;
+set_real_ip_from 94.103.124.101;
+set_real_ip_from 94.103.124.104;
+set_real_ip_from 94.103.124.107;
+set_real_ip_from 94.103.124.121;
+set_real_ip_from 94.103.124.90;
+set_real_ip_from 94.103.124.91;
+set_real_ip_from 94.103.124.98;
 set_real_ip_from 94.140.115.63;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
@@ -1741,7 +1742,6 @@ set_real_ip_from 94.75.225.81;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.142.161.63;
 set_real_ip_from 95.143.193.125;
-set_real_ip_from 95.164.4.104;
 set_real_ip_from 95.164.46.204;
 set_real_ip_from 95.168.173.143;
 set_real_ip_from 95.211.244.28;
